--- a/example/role.user.yaml
+++ b/example/role.user.yaml
@@ -2,6 +2,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: user:dashboard:view
+  labels:
+    app.kubernetes.io/controller: assign-team
 rules:
 - apiGroups: ["", "storage.k8s.io"]
   resources: ["persistentvolumes", "storageclasses"]
@@ -14,6 +16,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: user:namespaces:view
+  labels:
+    app.kubernetes.io/controller: assign-team
 rules:
 - apiGroups: [""]
   resources: ["namespaces"]
