--- a/kube-public/ingress.yaml
+++ b/kube-public/ingress.yaml
@@ -1,8 +1,7 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt
-  namespace: aks-team-ranger
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
@@ -13,6 +12,21 @@ spec:
     - http01:
         ingress:
           class:  dashboard
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: letsencrypt-staging
+spec:
+  acme:
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    email: info.dvgamer@gmail.com
+    privateKeySecretRef:
+      name: letsencrypt
+    solvers:
+    - http01:
+        ingress:
+          class: touno-io
 ---
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
